@@ -10,10 +10,10 @@ MIfitHMM(miData, nSims, ncores, poolEstimates = TRUE, alpha = 0.95,
   stationary = FALSE, verbose = 0, nlmPar = NULL, fit = TRUE,
   DM = NULL, cons = NULL, userBounds = NULL, workcons = NULL,
   stateNames = NULL, knownStates = NULL, fixPar = NULL, retryFits = 0,
-  covNames = NULL, spatialCovs = NULL, centers = NULL, angleCovs = NULL,
-  method = "IS", parIS = 1000, dfSim = Inf, grid.eps = 1, crit = 2.5,
-  scaleSim = 1, force.quad = TRUE, fullPost = TRUE, dfPostIS = Inf,
-  scalePostIS = 1, thetaSamp = NULL)
+  covNames = NULL, spatialCovs = NULL, centers = NULL, centroids = NULL,
+  angleCovs = NULL, method = "IS", parIS = 1000, dfSim = Inf,
+  grid.eps = 1, crit = 2.5, scaleSim = 1, force.quad = TRUE,
+  fullPost = TRUE, dfPostIS = Inf, scalePostIS = 1, thetaSamp = NULL)
 }
 \arguments{
 \item{miData}{A \code{\link{crwData}} object, a \code{\link{crwSim}} object, or a list of \code{\link{momentuHMMData}} objects.}
@@ -97,6 +97,9 @@ a \code{\link{crwData}} object; otherwise \code{spatialCovs} is ignored). See \c
 \item{centers}{2-column matrix providing the x-coordinates (column 1) and y-coordinates (column 2) for any activity centers (e.g., potential 
 centers of attraction or repulsion) from which distance and angle covariates will be calculated based on realizations of the position process. 
 See \code{\link{prepData}}. Ignored unless \code{miData} is a \code{\link{crwData}} object.}
+
+\item{centroids}{List where each element is a data frame containing the x-coordinates ('x'), y-coordinates ('y'), and times (with user-specified name, e.g., `time') for centroids (i.e., dynamic activity centers where the coordinates can change over time)
+from which distance and angle covariates will be calculated based on the location data. See \code{\link{prepData}}. Ignored unless \code{miData} is a \code{\link{crwData}} object.}
 
 \item{angleCovs}{Character vector indicating the names of any circular-circular regression angular covariates in \code{miData$crwPredict} that need conversion from standard direction (in radians relative to the x-axis) to turning angle (relative to previous movement direction) 
 See \code{\link{prepData}}. Ignored unless \code{miData} is a \code{\link{crwData}} object.}
