@@ -1,4 +1,4 @@
-momentuHMM 1.4.0 2017-12-28
+momentuHMM 1.4.0 2017-12-29
 -----------------
 NEW FEATURES
 
@@ -7,6 +7,8 @@ NEW FEATURES
 * angleStrength function can now be used in circular-circular regression models. This allows each angular covariate (e.g. wind direction) to be weighted by an additional positive real covariate (e.g. wind speed) as in Rivest et al. (2016).
 
 * checkPar0 function added to aid users with initial parameter (e.g. Par0, beta0, delta0) specification
+
+* centroids argument added to MIfitHMM
 
 
 momentuHMM 1.3.0 2017-12-06
